--- a/organisms/welcom.html
+++ b/organisms/welcom.html
@@ -91,6 +91,11 @@
         </div>
         <!-- Refer and be rewarded ends here -->
       </div>
+      <!-- footer start -->
+      <div class="wu-footer">
+        <img src="../assets/images/footer-img.png" alt="" class="wu-footer__img">
+      </div>
+      <!-- footer end -->
     </div>
     <!-- welcome page end -->
 
