--- a/atoms/titles.html
+++ b/atoms/titles.html
@@ -21,6 +21,7 @@
     <h4 class="wu-sub-title">
       Send & Save
     </h4>
+    <p class="wu-para">Thank you for referring your friends to Western Union. Keep referring so you can earn more, including<span> a Gold Coin for every 10 successful referrals.</span></p>
     <!-- title end -->
 
     <!-- scripts -->
