--- a/atoms/button.html
+++ b/atoms/button.html
@@ -16,6 +16,12 @@
   <body>
     <!-- button start -->
     <button class="wu-btn">Button</button>
+    <button class="wu-btn wu-btn--arrow">
+      <p>Button</p>
+      <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M1 13L7 7L1 1" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>        
+    </button>
     <button class="wu-btn wu-btn--black">Button</button>
     <!-- button end -->
 
