--- a/organisms/my-referrals.html
+++ b/organisms/my-referrals.html
@@ -35,6 +35,49 @@
                         <img src="../assets/images/referral-img1.png" alt="">
                     </div>
                 </div>
+                <div role="none" class="wu-separator wu-separator--white"></div>
+                <div class="wu-referrals__tile">
+                    <h3 class="wu-referrals__tiletitle">
+                        2
+                    </h3>
+                    <p class="wu-referrals__tiledesc">
+                        WESTERN UNION GOLD COINS EARNED <span>AS OF 06 FEB 2023</span> 
+                    </p>
+                    <div class="wu-referrals__tileimg">
+                        <img src="../assets/images/referral-img2.png" alt="">
+                    </div>
+                </div>
+                <div role="none" class="wu-separator wu-separator--white"></div>
+                <div class="wu-referrals__links">
+                    <a href="" class="wu-referrals__linkitem">
+                        <p>how to redeem</p>
+                        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 13L7 7L1 1" stroke="#756F75" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            
+                    </a>
+                    <a href="" class="wu-referrals__linkitem">
+                        <p>view my referrals</p>
+                        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 13L7 7L1 1" stroke="#756F75" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            
+                    </a>
+                </div>
+            </div>
+            <div class="wu-referrals__btn">
+                <button class="wu-btn wu-btn--arrow">
+                    <p>Share link</p>
+                    <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 13L7 7L1 1" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>        
+                </button>
+                <button class="wu-btn wu-btn--arrow">
+                    <p>Info & help</p>
+                    <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 13L7 7L1 1" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>        
+                </button>
             </div>
         </div>
     </div>
