--- a/organisms/my-referrals.html
+++ b/organisms/my-referrals.html
@@ -41,8 +41,9 @@
                         2
                     </h3>
                     <p class="wu-referrals__tiledesc">
-                        WESTERN UNION GOLD COINS EARNED <span>AS OF 06 FEB 2023</span> 
+                        WESTERN UNION GOLD COINS EARNED
                     </p>
+                    <p class="wu-referrals__tilesub">AS OF 06 FEB 2023</p> 
                     <div class="wu-referrals__tileimg">
                         <img src="../assets/images/referral-img2.png" alt="">
                     </div>
