--- a/organisms/my-referrals.html
+++ b/organisms/my-referrals.html
@@ -17,12 +17,15 @@
     <!-- referral start -->
     <div class="wu-referrals">
         <div class="content-wrapper">
+            <!-- head section starts -->
             <div class="wu-referrals__head">
                  <h3 class="wu-title">
                     My referrals
                  </h3>
                  <p class="wu-para">Thank you for referring your friends to Western Union. Keep referring so you can earn more, including<span> a Gold Coin for every 10 successful referrals.</span></p>
             </div>
+            <!-- head section ends -->
+            <!-- body section starts -->
             <div class="wu-referrals__body">
                 <div class="wu-referrals__tile">
                     <h3 class="wu-referrals__tiletitle">
@@ -66,6 +69,8 @@
                     </a>
                 </div>
             </div>
+            <!-- body section ends -->
+            <!-- btn section starts -->
             <div class="wu-referrals__btn">
                 <button class="wu-btn wu-btn--arrow">
                     <p>Share link</p>
@@ -80,6 +85,7 @@
                       </svg>        
                 </button>
             </div>
+            <!-- btn section ends -->
         </div>
     </div>
     <!-- referral end -->
