--- a/organisms/signinup.html
+++ b/organisms/signinup.html
@@ -17,7 +17,7 @@
     <!-- signinup start -->
     <div class="wu-signinup">
       <img src="../assets/images/ornements.png" alt="" class="wu-signinup__ormimg">
-      <div class="container">
+      <div class="content-wrapper">
         <div class="wu-signinup__content">
           <!-- signup start -->
           <div class="wu-signinup__signup">
@@ -58,14 +58,6 @@
             <h3 class="wu-title">Sign up</h3>
             <div class="wu-signinup__form">
               <div class="wu-inpwrap">
-                <input type="text" class="wu-inp" required>
-                <label for="" class="wu-label">Name</label>
-              </div>
-              <div class="wu-inpwrap">
-                <input type="text" class="wu-inp" required>
-                <label for="" class="wu-label">NRIC ID / FIN  -  Enter last 4 digits only</label>
-              </div>
-              <div class="wu-inpwrap">
                 <div class="wu-ccode-select">
                   <select name="" id="" class="wu-ccode-select__select">
                       <option value="">+65 </option>
@@ -75,6 +67,10 @@
                   </select>
                   <input type="number" class="wu-ccode-select__input"></input>
                 </div>
+              </div>
+              <div class="wu-inpwrap">
+                <input type="text" class="wu-inp" required>
+                <label for="" class="wu-label">NRIC ID / FIN  -  Enter last 4 digits only</label>
               </div>
               <div class="wu-signinup__act">
                 <button class="wu-btn">Sign in</button>
