--- a/organisms/yes.html
+++ b/organisms/yes.html
@@ -16,7 +16,47 @@
   <body>
     <!-- yes start -->
     <div class="wu-yes">
-      
+      <img src="../assets/images/ornements.png" alt="" class="wu-yes__ormimg">
+      <div class="content-wrapper"> 
+         <div class="wu-yes__content">
+            <h3 class="wu-title">YES</h3>
+            <p class="wu-para wu-para--bm">I wish to get my QR coupons</p>
+            <p class="wu-para">You will be rewarded with $25 QR coupons which can be redeemed at any of our outlets in Singapore</p>
+            <div class="wu-yes__form">
+              <div class="wu-inpwrap">
+                <input type="text" class="wu-inp" required>
+                <label for="" class="wu-label">Name</label>
+              </div>
+              <div class="wu-inpwrap">
+                <input type="text" class="wu-inp" required>
+                <label for="" class="wu-label">NRIC ID / FIN  -  Enter last 4 digits only</label>
+              </div>
+              <div class="wu-inpwrap">
+                <div class="wu-ccode-select">
+                  <select name="" id="" class="wu-ccode-select__select">
+                    <option value="">+65 </option>
+                    <option value="">+65 </option>
+                    <option value="">+65 </option>
+                    <option value="">+65 </option>
+                  </select>
+                  <input type="number" class="wu-ccode-select__input"></input>
+                </div>
+              </div>
+              <div class="wu-yes__tnc">
+                <input type="checkbox" name="" id="signup-tnc" class="wu-checkbox">
+                <label for="signup-tnc" class="wu-label">I agreed with <a href="" class="">Terms & Conditions</a></label>
+              </div>
+              <div class="wu-yes__act">
+                <button class="wu-btn wu-btn--black">Get My Coupon</button>
+              </div>
+            </div>
+         </div>
+      </div>
+      <!-- footer start -->
+      <div class="wu-footer">
+         <img src="../assets/images/footer-img.png" alt="" class="wu-footer__img">
+      </div>
+      <!-- footer end -->
     </div>
     <!-- yes end -->
 
