--- a/molecules/share-modal.html
+++ b/molecules/share-modal.html
@@ -19,7 +19,7 @@
         <div class="content-wrapper">
             <!-- btn section starts -->
             <div class="wu-referrals__btn">
-                <button class="wu-btn wu-btn--arrow" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button class="wu-btn wu-btn--arrow" data-bs-toggle="modal" data-bs-target="#ShareModal">
                     <p>Share link</p>
                     <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M1 13L7 7L1 1" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -36,7 +36,7 @@
         </div>
     </div>
     <!-- Modal -->
-    <div class="modal fade wu-share-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade wu-share-modal" id="ShareModal" tabindex="-1" aria-labelledby="ShareModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <!-- <div class="modal-header">
