--- a/molecules/coupon.html
+++ b/molecules/coupon.html
@@ -15,8 +15,8 @@
   </head>
   <body style="padding: 10px;">
     <!-- Coupon start -->
-    <a href="#" class="wu-coupon">
-      <div class="wu-coupon__left">
+    <div href="#" class="wu-coupon">
+      <div class="wu-coupon__left" data-bs-toggle="modal" data-bs-target="#exampleModal">
         <div class="wu-coupon__img">
           <img src="../assets/images/coupon-qr.png" alt="QR code">
         </div>
@@ -50,11 +50,58 @@
             </svg>
         </div>
       </div>
-    </a>
+      <!-- yellow div -->
+      <div class="wu-coupon__hid">
+        <div class="wu-coupon__hidouter">
+          <h4 class="wu-coupon__terms">Terms & conditions</h4>
+          <ul class="wu-coupon__list">
+            <li>Minimum total transaction of $200.</li>
+            <li>Redeemable at all Western Union Outlets in SG.</li>
+            <li>Not valid with any other discounts & promotions.</li>
+            <li>No cash value.</li>
+            <li>Promo ends: 30 April 2023.</li>
+          </ul>
+          <div class="wu-coupon__right_arrow wu-coupon__right_arrow--left">
+            <svg viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_26_53817)">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M2.03992 0.0674234L9.93184 7.83638C10.0243 7.92302 10.0243 8.07224 9.93184 8.16369L2.03992 15.9326C1.95229 16.0241 1.83057 16.0241 1.73807 15.9326L0 14.2142L6.14898 8.16369C6.2074 8.07705 6.2074 7.92783 6.14898 7.83638L0 1.78583L1.73807 0.0674234C1.82571 -0.0192192 1.94742 -0.0192192 2.03992 0.0674234Z" fill="#FFDD00"></path>
+              </g>
+              <defs>
+              <clipPath id="clip0_26_53817">
+              <rect width="10" height="16" fill="white"></rect>
+              </clipPath>
+              </defs>
+              </svg>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade wu-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <!-- <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div> -->
+          <div class="modal-body wu-modal__body">
+            <div class="wu-coupon__left" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <div class="wu-coupon__img">
+                <img src="../assets/images/modal-qr.png" alt="QR code">
+              </div>
+            </div>
+          </div>
+          <!-- <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div> -->
+        </div>
+      </div>
+      </div>
     <!-- Coupon end -->
 
     <!--Redeemed Coupon start -->
-    <a href="#" class="wu-coupon wu-coupon--redeemed">
+    <div href="#" class="wu-coupon wu-coupon--redeemed">
       <div class="wu-coupon__left">
         <div class="wu-coupon__img">
           <img src="../assets/images/coupon-qr.png" alt="QR code">
@@ -89,7 +136,7 @@
             </svg>
         </div>
       </div>
-    </a>
+    </div>
     <!--Redeemed Coupon end -->
 
     <!-- scripts -->
