--- a/pages/demo.html
+++ b/pages/demo.html
@@ -15,6 +15,43 @@
   </head>
   <body>
     <!-- body content start -->
+    <!-- Header start -->
+    <div class="wu-header">
+      <div class="content-wrapper">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <a class="navbar-brand wu-header__logo" href="#">
+              <img src="../assets/images/logo.png">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                <li class="nav-item">
+                  <a class="nav-link" href="#">content1</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">content2</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">content3</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+    <!-- Header end -->
+    <!-- footer start -->
+    <div class="wu-footer">
+      <img src="../assets/images/footer-img.png" alt="" class="wu-footer__img">
+    </div>
+  <!-- footer end -->
     <!-- body content end -->
 
     <!-- scripts -->
