--- a/organisms/lucky-draw.html
+++ b/organisms/lucky-draw.html
@@ -14,7 +14,7 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- referral start -->
+    <!-- luckydraw start -->
     <div class="wu-referrals wu-luckydraw">
         <div class="content-wrapper">
             <!-- head section starts -->
@@ -107,7 +107,7 @@
             <!-- btn section ends -->
         </div>
     </div>
-    <!-- referral end -->
+    <!-- luckydraw end -->
 
     <!-- scripts -->
     <script src="../assets/js/jquery.slim.min.js"></script>
