--- a/organisms/my-coupons.html
+++ b/organisms/my-coupons.html
@@ -29,7 +29,7 @@
             <div class="wu-referrals__body wu-my-coupons__body">
                 <!-- Coupon start -->
                 <div href="#" class="wu-coupon">
-                    <div class="wu-coupon__left" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <div class="wu-coupon__left" data-bs-toggle="modal" data-bs-target="#exampleModal1">
                     <div class="wu-coupon__img">
                         <img src="../assets/images/coupon-qr.png" alt="QR code">
                     </div>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <!-- Modal -->
-                    <div class="modal fade wu-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade wu-modal" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModal1Label" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <!-- <div class="modal-header">
@@ -114,7 +114,7 @@
                 <!-- Coupon end -->
                 <!-- Coupon start -->
                 <div href="#" class="wu-coupon">
-                    <div class="wu-coupon__left" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <div class="wu-coupon__left" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                     <div class="wu-coupon__img">
                         <img src="../assets/images/coupon-qr.png" alt="QR code">
                     </div>
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                 <!-- Modal -->
-                    <div class="modal fade wu-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade wu-modal" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <!-- <div class="modal-header">
@@ -199,7 +199,7 @@
                 <!-- Coupon end -->
                 <!-- Coupon start -->
                 <div href="#" class="wu-coupon">
-                    <div class="wu-coupon__left" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <div class="wu-coupon__left" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                     <div class="wu-coupon__img">
                         <img src="../assets/images/coupon-qr.png" alt="QR code">
                     </div>
@@ -260,7 +260,7 @@
                     </div>
                 </div>
                 <!-- Modal -->
-                    <div class="modal fade wu-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade wu-modal" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModal3Label" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <!-- <div class="modal-header">
