--- a/pages/Yes-Page.html
+++ b/pages/Yes-Page.html
@@ -20,7 +20,7 @@
       <div class="content-wrapper">
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
-            <a class="navbar-brand wu-header__logo" href="#">
+            <a class="navbar-brand wu-header__logo" href="WelcomePage.html">
               <img src="../assets/images/logo.png">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -32,13 +32,13 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#">content1</a>
+                  <a class="nav-link" href="Tabs-page.html">My coupons</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">content2</a>
+                  <a class="nav-link" href="RamdanRewards-Page.html">Ramdan Rewards</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">content3</a>
+                  <a class="nav-link" href="Yes-Page.html">Yes Page</a>
                 </li>
               </ul>
             </div>
@@ -80,7 +80,7 @@
                 <label for="signup-tnc" class="wu-label">I agreed with <a href="" class="">Terms & Conditions</a></label>
               </div>
               <div class="wu-yes__act">
-                <button class="wu-btn wu-btn--black">Get My Coupon</button>
+                <a href="Tabs-page.html" class="wu-btn wu-btn--black">Get My Coupon</a>
               </div>
             </div>
          </div>
