--- a/pages/WelcomePage.html
+++ b/pages/WelcomePage.html
@@ -20,7 +20,7 @@
       <div class="content-wrapper">
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
-            <a class="navbar-brand wu-header__logo" href="#">
+            <a class="navbar-brand wu-header__logo" href="WelcomePage.html">
               <img src="../assets/images/logo.png">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -32,13 +32,13 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#">content1</a>
+                  <a class="nav-link" href="Tabs-page.html">My coupons</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">content2</a>
+                  <a class="nav-link" href="RamdanRewards-Page.html">Ramdan Rewards</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">content3</a>
+                  <a class="nav-link" href="Yes-Page.html">Yes Page</a>
                 </li>
               </ul>
             </div>
@@ -67,8 +67,8 @@
             </div>
           </div>
           <div class="wu-welcome__btn-wrap">
-            <button class="wu-btn wu-btn--black">Sign up</button>
-            <button class="wu-btn">Sign in</button>
+            <a href="SignUp-Page.html" class="wu-btn wu-btn--black">Sign up</a>
+            <a href="SignUp-Page.html" class="wu-btn">Sign in</a>
           </div>
         </div>
         <!-- send save win ends -->
