--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <!-- send save win starts -->
         <div class="wu-welcome__hero">
           <div class="wu-welcome__hero_dec">
-            <img src="../assets/images/ornements.png" alt="">
+            <img src="./assets/images/ornements.png" alt="">
           </div>
           <div class="wu-welcome__hero_top">
-            <img src="../assets/images/map.png" alt="Send.Save.Win">
+            <img src="./assets/images/map.png" alt="Send.Save.Win">
           </div>
           <div class="wu-welcome__hero_bottom">
             <div class="wu-welcome__title">
@@ -86,7 +86,7 @@
             </div>
           </div>
           <div class="wu-welcome__block__img">
-            <img src="../assets/images/send-and-save.svg" alt="">
+            <img src="./assets/images/send-and-save.svg" alt="">
           </div>
         </div>
         <!-- Send and Save ends here -->
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="wu-welcome__block__img">
-            <img src="../assets/images/send-more.svg" alt="">
+            <img src="./assets/images/send-more.svg" alt="">
           </div>
         </div>
         <!-- Send more ends here -->
@@ -120,7 +120,7 @@
             </div>
           </div>
           <div class="wu-welcome__block__img">
-            <img src="../assets/images/refer.svg" alt="">
+            <img src="./assets/images/refer.svg" alt="">
           </div>
         </div>
         <!-- Refer and be rewarded ends here -->
