--- a/organisms/header.html
+++ b/organisms/header.html
@@ -23,7 +23,8 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand wu-header__logo" href="#">
-            <img src="../assets/images/logo.png">
+            <img src="../assets/images/logo-small.svg" class="only-mobile">
+            <img src="../assets/images/logo_YellowWhite.png" class="desk-visible">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -31,8 +32,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" href="#">content1</a>
               </li>
@@ -50,6 +50,41 @@
   </div>
 
   <!-- Header end -->
+
+  <!-- yellow Header start -->
+
+  <div class="wu-header wu-header--yellow">
+    <div class="content-wrapper">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand wu-header__logo" href="#">
+            <img src="../assets/images/logo-small-yellow.svg" class="only-mobile">
+            <img src="../assets/images/logo-yellow-desk.png" class="desk-visible">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#">content1</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">content2</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">content3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
+
+  <!-- yellow Header end -->
 
   <!-- scripts -->
   <script src="../assets/js/jquery.slim.min.js"></script>
