--- a/atoms/input.html
+++ b/atoms/input.html
@@ -16,16 +16,16 @@
   <body>
     <!-- input start -->
     <div class="wu-inpwrap">
-      <input type="text" class="wu-inp" required>
-      <label for="" class="wu-label">Label</label>
+      <input type="text" class="wu-inp" placeholder="text">
+      <!-- <label for="" class="wu-label">Label</label> -->
     </div>
     <div class="wu-inpwrap">
-      <input type="text" class="wu-inp" required>
-      <label for="" class="wu-label">Label</label>
+      <input type="text" class="wu-inp" placeholder="text">
+      <!-- <label for="" class="wu-label">Label</label> -->
     </div>
     <div class="wu-inpwrap">
-      <input type="text" class="wu-inp" required>
-      <label for="" class="wu-label">NRIC ID / FIN  -  Enter last 4 digits only</label>
+      <input type="text" class="wu-inp" placeholder="text">
+      <!-- <label for="" class="wu-label">NRIC ID / FIN  -  Enter last 4 digits only</label> -->
     </div>
     <!-- input end -->
 
