--- a/pages/SignUp-Page.html
+++ b/pages/SignUp-Page.html
@@ -16,12 +16,13 @@
   <body>
     <!-- body content start -->
     <!-- Header start -->
-    <div class="wu-header">
+    <div class="wu-header wu-header--yellow">
       <div class="content-wrapper">
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
-            <a class="navbar-brand wu-header__logo" href="WelcomePage.html">
-              <img src="../assets/images/logo.png">
+            <a class="navbar-brand wu-header__logo" href="#">
+              <img src="../assets/images/logo-small-yellow.svg" class="only-mobile">
+              <img src="../assets/images/logo-yellow-desk.png" class="desk-visible">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,16 +30,15 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="Tabs-page.html">My coupons</a>
+                  <a class="nav-link" href="#">content1</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="RamdanRewards-Page.html">Ramdan Rewards</a>
+                  <a class="nav-link" href="#">content2</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Yes-Page.html">Yes Page</a>
+                  <a class="nav-link" href="#">content3</a>
                 </li>
               </ul>
             </div>
@@ -49,79 +49,55 @@
     <!-- Header end -->
     <!-- signinup start -->
     <div class="wu-signinup">
-      <img src="../assets/images/ornements.png" alt="" class="wu-signinup__ormimg">
-      <div class="container">
-        <div class="wu-signinup__content">
-          <!-- signup start -->
-          <div class="wu-signinup__signup">
-            <h3 class="wu-title">Sign up</h3>
-            <div class="wu-signinup__form">
-              <div class="wu-inpwrap">
-                <input type="text" class="wu-inp" required>
-                <label for="" class="wu-label">Name</label>
-              </div>
-              <div class="wu-inpwrap">
-                <input type="text" class="wu-inp" required>
-                <label for="" class="wu-label">NRIC ID / FIN  -  Enter last 4 digits only</label>
-              </div>
-              <div class="wu-inpwrap">
-                <div class="wu-ccode-select">
-                  <select name="" id="" class="wu-ccode-select__select">
-                    <option value="">+65 </option>
-                    <option value="">+65 </option>
-                    <option value="">+65 </option>
-                    <option value="">+65 </option>
-                  </select>
-                  <input type="number" class="wu-ccode-select__input"></input>
+      <div class="wu-signinup__bg desk-visible hide-mobile-tablet" style="background-image: url(../assets/images/signup-bg.png);"></div>
+      <div class="wu-signinup__bg only-mobile-tablet" style="background-image: url(../assets/images/signup-bg-tab.png);"></div>
+      <div class="content-wrapper">
+        <div class="wu-signinup__wrap">
+            <!-- signup start -->
+            <div class="wu-signinup__content">
+              <div class="wu-signinup__content__bg only-mobile" style="background-image: url(../assets/images/signup-bg-mob.png);"></div>
+              <div class="wu-signinup__content-wrap">
+                <h3 class="wu-title">
+                  Send money,spread happiness: Get rewarded with Western Union!
+                </h3>
+                <div>
+                  WIN FABULOUS PRIZES: Gold Necklace or Universal Studio Tickets, NTUC shopping vouchers.
                 </div>
               </div>
-              <div class="wu-signinup__tnc">
-                <input type="checkbox" name="" id="signup-tnc" class="wu-checkbox">
-                <label for="signup-tnc" class="wu-label">I agreed with <a href="" class="">Terms & Conditions</a></label>
-              </div>
-              <div class="wu-signinup__act">
-                <button class="wu-btn wu-btn--black">Sign up</button>
-              </div>
             </div>
-          </div>
-          <!-- signup end -->
-          <div role="none" class="wu-separator"></div>
-          <!-- signin start -->
-          <div class="wu-signinup__signin">
-            <h3 class="wu-title">Sign up</h3>
-            <div class="wu-signinup__form">
-              <div class="wu-inpwrap">
-                <input type="text" class="wu-inp" required>
-                <label for="" class="wu-label">Name</label>
-              </div>
-              <div class="wu-inpwrap">
-                <input type="text" class="wu-inp" required>
-                <label for="" class="wu-label">NRIC ID / FIN  -  Enter last 4 digits only</label>
-              </div>
-              <div class="wu-inpwrap">
-                <div class="wu-ccode-select">
-                  <select name="" id="" class="wu-ccode-select__select">
+              <div class="wu-signinup__form">
+                <div class="wu-inpwrap">
+                  <input type="text" class="wu-inp" placeholder="Name">
+                </div>
+                <div class="wu-inpwrap">
+                  <input type="text" class="wu-inp" placeholder="NRIC ID / FIN  -  Enter last 4 digits only">
+                </div>
+                <div class="wu-inpwrap">
+                  <div class="wu-ccode-select">
+                    <select name="" id="" class="wu-ccode-select__select">
                       <option value="">+65 </option>
                       <option value="">+65 </option>
                       <option value="">+65 </option>
                       <option value="">+65 </option>
-                  </select>
-                  <input type="number" class="wu-ccode-select__input"></input>
+                    </select>
+                    <input type="number" class="wu-ccode-select__input"></input>
+                  </div>
+                </div>
+                <div class="wu-signinup__tnc">
+                  <input type="checkbox" name="" id="signup-tnc" class="wu-checkbox">
+                  <label for="signup-tnc" class="wu-label">I agreed with <a href="" class="">Terms & Conditions</a></label>
+                </div>
+                <div class="wu-signinup__act">
+                  <button class="wu-btn wu-btn--black">Sign up</button>
                 </div>
               </div>
-              <div class="wu-signinup__act">
-                <button class="wu-btn">Sign in</button>
-              </div>
-            </div>
-          </div>
-          <!-- signin end -->
+            <!-- signup end -->
         </div>
       </div>
     </div>
     <!-- signinup end -->
     <!-- footer start -->
     <div class="wu-footer">
-      <img src="../assets/images/footer-img.png" alt="" class="wu-footer__img">
     </div>
     <!-- footer end -->
     <!-- body content end -->
