lucky-draw-page

--- a/organisms/tab.html
+++ b/organisms/tab.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- tab start -->
-    <div class="wu-tab content-wrapper">
+    <div class="wu-tab">
       <!-- tab header starts -->
       <ul class="wu-tab__outer">
         <li class="wu-tab__item">
