--- a/pages/my-gifts.html
+++ b/pages/my-gifts.html
@@ -167,9 +167,10 @@
   <!-- body content end -->
 
   <!-- scripts -->
+  <!-- <script src="../assets/js/jquery.slim.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
   <!-- <script src="../assets/js/aos.js"></script>
-    <script src="../assets/js/slick.min.js"></script> -->
+  <script src="../assets/js/slick.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
