--- a/pages/lucky-draw-page.html
+++ b/pages/lucky-draw-page.html
@@ -75,7 +75,7 @@
   <div class="wu-lucky-draw">
     <div class="content-wrapper">
       <div class="wu-lucky-draw__head">
-        <h4 class="wu-sub-title">
+        <h4 class="wu-title">
           Lucky Draw
         </h4>
         <p class="wu-para">Keep sending, keep winning. The more you send, the more chances you have of winning exclusive
@@ -165,7 +165,10 @@
     </div>
   </div>
   <!-- body content end -->
-
+  <!-- footer start -->
+  <div class="wu-footer">
+  </div>
+  <!-- footer end -->
   <!-- scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
   <!-- <script src="../assets/js/aos.js"></script>
