--- a/pages/SignUp-Page.html
+++ b/pages/SignUp-Page.html
@@ -1,113 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- styles -->
-    <link rel="stylesheet" href="../assets/css/aos.css">
-    <link rel="stylesheet" href="../assets/css/slick.css">
-    <link rel="stylesheet" href="../assets/css/slick-theme.css">
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/style.css" />
-    <!-- styles -->
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- body content start -->
-    <!-- Header start -->
-    <div class="wu-header wu-header--yellow">
-      <div class="content-wrapper">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container-fluid">
-            <a class="navbar-brand wu-header__logo" href="#">
-              <img src="../assets/images/logo-small-yellow.svg" class="only-mobile">
-              <img src="../assets/images/logo-yellow-desk.png" class="desk-visible">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">content1</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">content2</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">content3</a>
-                </li>
-              </ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- styles -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <!-- styles -->
+  <title>Document</title>
+</head>
+
+<body>
+  <!-- body content start -->
+  <!-- Header start -->
+  <div class="wu-header wu-header--yellow">
+    <div class="content-wrapper">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand wu-header__logo" href="#">
+            <img src="../assets/images/logo-small-yellow.svg" class="only-mobile">
+            <img src="../assets/images/logo-yellow-desk.png" class="desk-visible">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#">content1</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">content2</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">content3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <!-- Header end -->
+  <!-- signinup start -->
+  <div class="wu-signinup">
+    <div class="wu-signinup__bg desk-visible hide-mobile-tablet"
+      style="background-image: url(../assets/images/signup-bg.png);"></div>
+    <div class="wu-signinup__bg only-mobile-tablet" style="background-image: url(../assets/images/signup-bg-tab.png);">
+    </div>
+    <div class="content-wrapper">
+      <div class="wu-signinup__wrap">
+        <!-- signup start -->
+        <div class="wu-signinup__content">
+          <div class="wu-signinup__content__bg only-mobile"
+            style="background-image: url(../assets/images/signup-bg-mob.png);"></div>
+          <div class="wu-signinup__content-wrap">
+            <h3 class="wu-title">
+              Send money,spread happiness: Get rewarded with Western Union!
+            </h3>
+            <div>
+              WIN FABULOUS PRIZES: Gold Necklace or Universal Studio Tickets, NTUC shopping vouchers.
             </div>
           </div>
-        </nav>
-      </div>
-    </div>
-    <!-- Header end -->
-    <!-- signinup start -->
-    <div class="wu-signinup">
-      <div class="wu-signinup__bg desk-visible hide-mobile-tablet" style="background-image: url(../assets/images/signup-bg.png);"></div>
-      <div class="wu-signinup__bg only-mobile-tablet" style="background-image: url(../assets/images/signup-bg-tab.png);"></div>
-      <div class="content-wrapper">
-        <div class="wu-signinup__wrap">
-            <!-- signup start -->
-            <div class="wu-signinup__content">
-              <div class="wu-signinup__content__bg only-mobile" style="background-image: url(../assets/images/signup-bg-mob.png);"></div>
-              <div class="wu-signinup__content-wrap">
-                <h3 class="wu-title">
-                  Send money,spread happiness: Get rewarded with Western Union!
-                </h3>
-                <div>
-                  WIN FABULOUS PRIZES: Gold Necklace or Universal Studio Tickets, NTUC shopping vouchers.
-                </div>
-              </div>
-            </div>
-              <div class="wu-signinup__form">
-                <div class="wu-inpwrap">
-                  <input type="text" class="wu-inp" placeholder="Name">
-                </div>
-                <div class="wu-inpwrap">
-                  <input type="text" class="wu-inp" placeholder="NRIC ID / FIN  -  Enter last 4 digits only">
-                </div>
-                <div class="wu-inpwrap">
-                  <div class="wu-ccode-select">
-                    <select name="" id="" class="wu-ccode-select__select">
-                      <option value="">+65 </option>
-                      <option value="">+65 </option>
-                      <option value="">+65 </option>
-                      <option value="">+65 </option>
-                    </select>
-                    <input type="number" class="wu-ccode-select__input"></input>
-                  </div>
-                </div>
-                <div class="wu-signinup__tnc">
-                  <input type="checkbox" name="" id="signup-tnc" class="wu-checkbox">
-                  <label for="signup-tnc" class="wu-label">I agreed with <a href="" class="">Terms & Conditions</a></label>
-                </div>
-                <div class="wu-signinup__act">
-                  <button class="wu-btn wu-btn--black">Sign up</button>
-                </div>
-              </div>
-            <!-- signup end -->
         </div>
+        <div class="wu-signinup__form">
+          <div class="wu-inpwrap">
+            <input type="text" class="wu-inp" placeholder="Name">
+          </div>
+          <div class="wu-inpwrap">
+            <input type="text" class="wu-inp" placeholder="NRIC ID / FIN  -  Enter last 4 digits only">
+          </div>
+          <div class="wu-inpwrap">
+            <div class="wu-ccode-select">
+              <select name="" id="" class="wu-ccode-select__select">
+                <option value="">+65 </option>
+                <option value="">+65 </option>
+                <option value="">+65 </option>
+                <option value="">+65 </option>
+              </select>
+              <input type="number" class="wu-ccode-select__input"></input>
+            </div>
+          </div>
+          <div class="wu-signinup__tnc">
+            <input type="checkbox" name="" id="signup-tnc" class="wu-checkbox">
+            <label for="signup-tnc" class="wu-label">I agreed with <a href="" class="">Terms & Conditions</a></label>
+          </div>
+          <div class="wu-signinup__act">
+            <button class="wu-btn wu-btn--black">Sign up</button>
+          </div>
+        </div>
+        <!-- signup end -->
       </div>
     </div>
-    <!-- signinup end -->
-    <!-- footer start -->
-    <div class="wu-footer">
-    </div>
-    <!-- footer end -->
-    <!-- body content end -->
+  </div>
+  <!-- signinup end -->
+  <!-- footer start -->
+  <div class="wu-footer">
+  </div>
+  <!-- footer end -->
+  <!-- body content end -->
 
-    <!-- scripts -->
-    <script src="../assets/js/jquery.slim.min.js"></script>
-    <script src="../assets/js/aos.js"></script>
-    <script src="../assets/js/slick.min.js"></script>
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/script.js"></script>
-    <!-- scripts -->
-  </body>
+  <!-- scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="../assets/js/script.js"></script>
+  <!-- scripts -->
+</body>
+
 </html>
